--- a/查看进程端口.md
+++ b/查看进程端口.md
@@ -13,5 +13,8 @@
 
 * 3 根据端口号查看正在运行的程序  以及PID
 
-> lsof -i:3306
+> lsof -i:3306  
+
+* 4 nohup 不挂断地运行后台命令，及时关闭shell，脚本一直在服务器运行着。
+> nohup python3 hello.py 
  
